--- a/admission.html
+++ b/admission.html
@@ -11,6 +11,9 @@
         <div class="logo">
             <h1>Music School</h1>
         </div>
+        <div class="back-link">
+            <a href="index.html" class="home-button">ホームに戻る</a>
+        </div>
     </header>
 
     <main>
