--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="instrument-card">
                     <h3>Compose Lesson</h3>
                     <div class="instrument-image">
-                        <img src="images/compose.jpg" alt="Compose Lesson">
+                        <img src="images/compose.svg" alt="Compose Lesson">
                     </div>
                 </div>
             </div>
