レッスンページに料金表へのリンクを追加

--- a/lessons.html
+++ b/lessons.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons - Music School</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .price-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 5px 15px;
+            background-color: #333;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 3px;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
+        
+        .price-link:hover {
+            background-color: #555;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,6 +33,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="instruments.html">Instruments</a></li>
                 <li><a href="lessons.html" class="active">Lessons</a></li>
+                <li><a href="price.html">料金・教材</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -34,6 +52,7 @@
                     <p>ギターレッスンでは、初心者から上級者まで、あなたのレベルに合わせた指導を行います。</p>
                     <p>基本的な弾き方からテクニック、音楽理論まで幅広く学べます。</p>
                     <p>アコースティックギター、エレキギターどちらにも対応しています。</p>
+                    <a href="price.html" class="price-link">料金を確認する</a>
                 </div>
             </div>
 
@@ -42,6 +61,7 @@
                 <div class="lesson-content">
                     <p>ベースレッスンでは、リズム感や音程感覚を養いながら、バンドの要となる演奏技術を習得します。</p>
                     <p>基礎からスラップなどの応用テクニックまで、段階的に学べるカリキュラムをご用意しています。</p>
+                    <a href="price.html" class="price-link">料金を確認する</a>
                 </div>
             </div>
 
@@ -50,6 +70,7 @@
                 <div class="lesson-content">
                     <p>DTMレッスンでは、音楽制作ソフトの基本操作から、プロ品質の楽曲制作まで学べます。</p>
                     <p>ミックス、マスタリングなどの技術も習得できるため、自分だけのオリジナル楽曲を完成させることが可能です。</p>
+                    <a href="price.html" class="price-link">料金を確認する</a>
                 </div>
             </div>
 
@@ -58,6 +79,7 @@
                 <div class="lesson-content">
                     <p>作曲レッスンでは、メロディーの作り方、コード進行、楽曲構成など、作曲の基礎から応用まで学べます。</p>
                     <p>自分の感性を活かした楽曲制作ができるよう、個別に指導します。</p>
+                    <a href="price.html" class="price-link">料金を確認する</a>
                 </div>
             </div>
         </section>
