トップページのナビゲーションに料金・教材メニューを追加

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#home" class="active nav-link">Home</a></li>
                 <li><a href="#instruments" class="nav-link">Instruments</a></li>
                 <li><a href="#lessons" class="nav-link">Lessons</a></li>
+                <li><a href="price.html" class="nav-link">料金・教材</a></li>
                 <li><a href="#about" class="nav-link">About Us</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -82,6 +83,7 @@
                     <div class="lesson-content">
                         <p>ギターレッスンでは、初心者から上級者まで、あなたのレベルに合わせた指導を行います。</p>
                         <p>基本的な弾き方からテクニック、音楽理論まで幅広く学べます。</p>
+                        <a href="price.html" class="price-link">料金を確認する</a>
                     </div>
                 </div>
 
@@ -89,6 +91,7 @@
                     <h3><i class="fas fa-guitar"></i> Bass Lesson</h3>
                     <div class="lesson-content">
                         <p>ベースレッスンでは、リズム感や音程感覚を養いながら、バンドの要となる演奏技術を習得します。</p>
+                        <a href="price.html" class="price-link">料金を確認する</a>
                     </div>
                 </div>
 
@@ -96,6 +99,7 @@
                     <h3><i class="fas fa-laptop"></i> DTM Lesson</h3>
                     <div class="lesson-content">
                         <p>DTMレッスンでは、音楽制作ソフトの基本操作から、プロ品質の楽曲制作まで学べます。</p>
+                        <a href="price.html" class="price-link">料金を確認する</a>
                     </div>
                 </div>
 
@@ -103,6 +107,7 @@
                     <h3><i class="fas fa-music"></i> Compose Lesson</h3>
                     <div class="lesson-content">
                         <p>作曲レッスンでは、メロディーの作り方、コード進行、楽曲構成など、作曲の基礎から応用まで学べます。</p>
+                        <a href="price.html" class="price-link">料金を確認する</a>
                     </div>
                 </div>
             </div>
@@ -194,6 +199,7 @@
                 <ul>
                     <li><a href="#home">ホーム</a></li>
                     <li><a href="#instruments">レッスン</a></li>
+                    <li><a href="price.html">料金・教材</a></li>
                     <li><a href="#about">私たちについて</a></li>
                     <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
