--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="instruments.html">Instruments</a></li>
                 <li><a href="lessons.html">Lessons</a></li>
+                <li><a href="price.html">料金・教材</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
