--- a/admission.html
+++ b/admission.html
@@ -11,9 +11,16 @@
         <div class="logo">
             <h1>Music School</h1>
         </div>
-        <div class="back-link">
-            <a href="index.html" class="home-button">ホームに戻る</a>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="instruments.html">Instruments</a></li>
+                <li><a href="lessons.html">Lessons</a></li>
+                <li><a href="price.html">料金・教材</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -45,7 +52,7 @@
                         <option value="dtm">DTM Lesson</option>
                         <option value="compose">Compose Lesson</option>
                     </select>
-                    <a href="#" id="fee-link" class="fee-link">料金表</a>
+                    <a href="price.html" id="fee-link" class="fee-link">料金表</a>
                 </div>
                 
                 <div class="form-group payment-section">
