--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#home" class="active nav-link">Home</a></li>
                 <li><a href="#instruments" class="nav-link">Instruments</a></li>
                 <li><a href="#lessons" class="nav-link">Lessons</a></li>
-                <li><a href="price.html" class="nav-link">料金・教材</a></li>
+                <li><a href="price.html" class="nav-link">Pricing</a></li>
                 <li><a href="#about" class="nav-link">About Us</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
