--- a/price.html
+++ b/price.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>料金・教材 - Music School</title>
+    <title>Pricing - Music School</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .price-container {
@@ -76,7 +76,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="instruments.html">Instruments</a></li>
                 <li><a href="lessons.html">Lessons</a></li>
-                <li><a href="price.html" class="active">料金・教材</a></li>
+                <li><a href="price.html" class="active">Pricing</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
