index.htmlのフッターメニューをPricingに変更

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <ul>
                     <li><a href="#home">ホーム</a></li>
                     <li><a href="#instruments">レッスン</a></li>
-                    <li><a href="price.html">料金・教材</a></li>
+                    <li><a href="price.html">Pricing</a></li>
                     <li><a href="#about">私たちについて</a></li>
                     <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
