instruments.htmlの料金・教材メニューをPricingに変更

--- a/instruments.html
+++ b/instruments.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="instruments.html" class="active">Instruments</a></li>
                 <li><a href="lessons.html">Lessons</a></li>
-                <li><a href="price.html">料金・教材</a></li>
+                <li><a href="price.html">Pricing</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
