--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="additional-styles.css">
+    <!-- レイアウト修正用CSS -->
+    <link rel="stylesheet" href="layout-fix.css">
 </head>
 <body>
     <header class="fixed-header">
