--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#home" class="active nav-link">Home</a></li>
                 <li><a href="#instruments" class="nav-link">Instruments</a></li>
                 <li><a href="#lessons" class="nav-link">Lessons</a></li>
-                <li><a href="#instructors" class="nav-link">講師紹介</a></li>
+                <li><a href="#instructors" class="nav-link">Instructors</a></li>
                 <li><a href="price.html" class="nav-link">Pricing</a></li>
                 <li><a href="#about" class="nav-link">About Us</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -354,8 +354,9 @@
             </div>
         </section>
 
-        <section id="about" class="section">
-            <h2 class="section-title">あなたの音楽の夢、私たちがサポートします。</h2>
+        <!-- ABOUT USセクション（修正） -->
+        <section id="about" class="section about-section">
+            <h2 class="section-title">About Us</h2>
             <div class="about-content">
                 <p>音楽を学ぶことは、人生を豊かにし、自己表現を広げる素晴らしい方法です。</p>
                 <p>しかし、忙しい毎日や移動の手間で、音楽を学ぶ機会が限られてしまうこともあります。</p>
@@ -363,7 +364,7 @@
                 <p>私たちのオンライン音楽教室では、どこでも、誰でも、好きな時間にレッスンを受けることができ、あなたのペースで音楽を学ぶことができます。</p>
                 <p>初心者から上級者まで、幅広いニーズに対応したコースを提供しており、あなただけのオーダーメイドレッスンをお楽しみいただけます。</p>
 
-                <h3>なぜ、私たちの音楽教室が選ばれるのか？</h3>
+                <h3 class="about-subtitle">なぜ、私たちの音楽教室が選ばれるのか？</h3>
                 
                 <div class="feature-list">
                     <div class="feature-item">
@@ -398,10 +399,11 @@
             </div>
         </section>
 
-        <section id="contact" class="section">
-            <h2 class="section-title">お問い合わせ</h2>
+        <!-- CONTACTセクション（修正） -->
+        <section id="contact" class="section contact-section">
+            <h2 class="section-title">Contact</h2>
             <div class="contact-form">
-                <p>ご質問やご不明点がありましたら、お気軽にお問い合わせください。</p>
+                <p class="contact-intro">ご質問やご不明点がありましたら、お気軽にお問い合わせください。</p>
                 
                 <form id="contactForm">
                     <div class="form-group">
