--- a/index.html
+++ b/index.html
@@ -183,3 +183,164 @@
     <div class="menu-overlay"></div>
 
     <main>
+        <section id="home" class="section hero">
+            <div class="hero-content">
+                <div class="hero-badge">音楽教室</div>
+                <h2>音楽を、<span class="accent">もっと自由に。</span></h2>
+                <p>自宅で学べる、プロの音楽レッスン。</p>
+                <div class="hero-actions">
+                    <a href="#instruments" class="btn btn-primary">レッスンを見る <i class="fas fa-arrow-right"></i></a>
+                    <a href="#contact" class="btn btn-outline">無料体験レッスン</a>
+                </div>
+                <div class="hero-quick-links">
+                    <a href="#price" class="quick-link"><i class="fas fa-yen-sign"></i> 料金プラン</a>
+                    <a href="#recruit" class="quick-link"><i class="fas fa-user-plus"></i> 採用情報</a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="images/hero.jpg" alt="Music School" loading="lazy">
+            </div>
+        </section>
+
+        <section id="instruments" class="section">
+            <h2 class="section-title">レッスンについて</h2>
+            <div class="instruments-grid">
+                <div class="instrument-card">
+                    <h3><i class="fas fa-guitar"></i> Guitar Lesson</h3>
+                    <div class="instrument-image">
+                        <img src="images/guitar.jpg" alt="Guitar Lesson" loading="lazy">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <p>初心者からプロまで、あなたのレベルに合わせたギターレッスン</p>
+                                <a href="#lessons" class="btn btn-outline">詳細を見る</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="instrument-card">
+                    <h3><i class="fas fa-guitar"></i> Bass Lesson</h3>
+                    <div class="instrument-image">
+                        <img src="images/bass.jpg" alt="Bass Lesson" loading="lazy">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <p>リズム感を養い、バンドの要となるベーステクニックを習得</p>
+                                <a href="#lessons" class="btn btn-outline">詳細を見る</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="instrument-card">
+                    <h3><i class="fas fa-laptop"></i> DTM Lesson</h3>
+                    <div class="instrument-image">
+                        <img src="images/dtm.jpg" alt="DTM Lesson" loading="lazy">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <p>音楽制作ソフトの基本操作から、プロ品質の楽曲制作まで</p>
+                                <a href="#lessons" class="btn btn-outline">詳細を見る</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="instrument-card">
+                    <h3><i class="fas fa-music"></i> Compose Lesson</h3>
+                    <div class="instrument-image">
+                        <img src="images/compose_2.jpg" alt="Compose Lesson" loading="lazy">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <p>メロディーの作り方、コード進行、楽曲構成など作曲の基礎から応用まで</p>
+                                <a href="#lessons" class="btn btn-outline">詳細を見る</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="lessons" class="section">
+            <h2 class="section-title">レッスン内容</h2>
+            <div class="lessons-container">
+                <div class="lesson-item">
+                    <div class="lesson-icon">
+                        <i class="fas fa-guitar"></i>
+                    </div>
+                    <div class="lesson-details">
+                        <h3>Guitar Lesson</h3>
+                        <div class="lesson-content">
+                            <p>ギターレッスンでは、初心者から上級者まで、あなたのレベルに合わせた指導を行います。</p>
+                            <p>基本的な弾き方からテクニック、音楽理論まで幅広く学べます。</p>
+                            <div class="lesson-features">
+                                <span class="lesson-feature">アコースティック</span>
+                                <span class="lesson-feature">エレキ</span>
+                                <span class="lesson-feature">クラシック</span>
+                                <span class="lesson-feature">弾き語り</span>
+                            </div>
+                            <a href="#price" class="price-link">料金を確認する <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lesson-item">
+                    <div class="lesson-icon">
+                        <i class="fas fa-guitar"></i>
+                    </div>
+                    <div class="lesson-details">
+                        <h3>Bass Lesson</h3>
+                        <div class="lesson-content">
+                            <p>ベースレッスンでは、リズム感や音程感覚を養いながら、バンドの要となる演奏技術を習得します。</p>
+                            <div class="lesson-features">
+                                <span class="lesson-feature">スラップ</span>
+                                <span class="lesson-feature">フィンガリング</span>
+                                <span class="lesson-feature">ピック奏法</span>
+                                <span class="lesson-feature">グルーヴ感</span>
+                            </div>
+                            <a href="#price" class="price-link">料金を確認する <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lesson-item">
+                    <div class="lesson-icon">
+                        <i class="fas fa-laptop"></i>
+                    </div>
+                    <div class="lesson-details">
+                        <h3>DTM Lesson</h3>
+                        <div class="lesson-content">
+                            <p>DTMレッスンでは、音楽制作ソフトの基本操作から、プロ品質の楽曲制作まで学べます。</p>
+                            <div class="lesson-features">
+                                <span class="lesson-feature">Logic Pro</span>
+                                <span class="lesson-feature">Cubase</span>
+                                <span class="lesson-feature">Ableton Live</span>
+                                <span class="lesson-feature">Pro Tools</span>
+                            </div>
+                            <a href="#price" class="price-link">料金を確認する <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lesson-item">
+                    <div class="lesson-icon">
+                        <i class="fas fa-music"></i>
+                    </div>
+                    <div class="lesson-details">
+                        <h3>Compose Lesson</h3>
+                        <div class="lesson-content">
+                            <p>作曲レッスンでは、メロディーの作り方、コード進行、楽曲構成など、作曲の基礎から応用まで学べます。</p>
+                            <div class="lesson-features">
+                                <span class="lesson-feature">ポップス</span>
+                                <span class="lesson-feature">ロック</span>
+                                <span class="lesson-feature">ジャズ</span>
+                                <span class="lesson-feature">クラシック</span>
+                            </div>
+                            <a href="#price" class="price-link">料金を確認する <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="join-button-container">
+                <a href="admission.html" class="join-button">入会する <i class="fas fa-arrow-right"></i></a>
+            </div>
+        </section>
