HOMEのクイックリンクに「お問い合わせ」リンク追加

--- a/index.html
+++ b/index.html
@@ -147,6 +147,27 @@
             transform: translateY(-2px);
         }
         
+        /* お問い合わせフォームのスタイル */
+        .contact-section {
+            background-color: #f5f5f5;
+            padding: 5rem 0;
+        }
+        .contact-container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0 1.5rem;
+        }
+        .contact-intro {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+        .contact-intro p {
+            max-width: 600px;
+            margin: 1rem auto 0;
+            color: #555;
+            line-height: 1.8;
+        }
+        
         /* レスポンシブ対応 */
         @media (max-width: 768px) {
             .recruit-positions {
@@ -194,6 +215,7 @@
                 </div>
                 <div class="hero-quick-links">
                     <a href="#price" class="quick-link"><i class="fas fa-yen-sign"></i> 料金プラン</a>
+                    <a href="#contact" class="quick-link"><i class="fas fa-envelope"></i> お問い合わせ</a>
                     <a href="#recruit" class="quick-link"><i class="fas fa-user-plus"></i> 採用情報</a>
                 </div>
             </div>
