お問い合わせと採用情報セクションの追加を完了

--- a/index.html
+++ b/index.html
@@ -571,3 +571,50 @@
                 </div>
             </div>
         </section>
+
+        <!-- 採用情報セクション -->
+        <section id="recruit" class="section recruit-section">
+            <div class="recruit-container">
+                <div class="recruit-intro">
+                    <h2 class="section-title">採用情報</h2>
+                    <p>Music Schoolでは、音楽の魅力を伝える情熱を持った講師やスタッフを募集しています。<br>お客様の音楽的成長をサポートし、共に成長できる環境で一緒に働きませんか？</p>
+                </div>
+                
+                <div class="recruit-positions">
+                    <div class="position-card">
+                        <div class="position-header">
+                            <i class="fas fa-guitar"></i>
+                            <h3>ギター講師</h3>
+                        </div>
+                        <div class="position-content">
+                            <ul class="position-details">
+                                <li><strong>雇用形態</strong> 正社員・業務委託</li>
+                                <li><strong>勤務時間</strong> 10:00〜21:00（シフト制）</li>
+                                <li><strong>給与</strong> 月給25万円〜（経験・能力による）</li>
+                            </ul>
+                            <a href="#contact" class="apply-button">応募する <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                    
+                    <div class="position-card">
+                        <div class="position-header">
+                            <i class="fas fa-laptop"></i>
+                            <h3>DTM講師</h3>
+                        </div>
+                        <div class="position-content">
+                            <ul class="position-details">
+                                <li><strong>雇用形態</strong> 正社員・業務委託</li>
+                                <li><strong>勤務時間</strong> 10:00〜21:00（シフト制）</li>
+                                <li><strong>給与</strong> 月給28万円〜（経験・能力による）</li>
+                            </ul>
+                            <a href="#contact" class="apply-button">応募する <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
