--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </header>
 
     <main>
+        <!-- ここにメインコンテンツが入ります -->
+        
         <!-- お問い合わせセクション -->
         <section id="contact" class="section contact-section">
             <div class="contact-container">
