--- a/index.html
+++ b/index.html
@@ -543,36 +543,10 @@
                 </div>
                 
                 <div class="contact-info">
-                    <div class="contact-methods">
-                        <div class="contact-method">
-                            <i class="fas fa-phone-alt"></i>
-                            <div class="contact-method-details">
-                                <h4>お電話</h4>
-                                <p>03-1234-5678（平日10:00〜19:00）</p>
-                            </div>
-                        </div>
-                        
-                        <div class="contact-method">
-                            <i class="fas fa-envelope"></i>
-                            <div class="contact-method-details">
-                                <h4>メール</h4>
-                                <p>info@music-school.example.com</p>
-                            </div>
-                        </div>
-                        <button type="submit" class="form-button">送信する <i class="fas fa-paper-plane"></i></button>
-
-                        <div class="contact-method">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="contact-method-details">
-                                <h4>住所</h4>
-                                <p>東京都新宿区西新宿1-2-3 ミュージックビル4F</p>
-                            </div>
-                        </div>
+                    <div class="contact-form">
+                        <p class="form-description">詳細なお問い合わせは、以下のフォームからお願いいたします。</p>
+                        <a href="contact.html" class="contact-form-button">お問い合わせフォームへ <i class="fas fa-arrow-right"></i></a>
                     </div>
-                        <p class="form-note">
-                            <i class="fas fa-info-circle"></i> <span style="color: var(--secondary);">*</span>は必須項目です
-                        </p>
-                    </form>
                 </div>
             </div>
         </section>
