--- a/index.html
+++ b/index.html
@@ -567,8 +567,7 @@
                         <div class="genres-container">
                             <div class="genre-card card">
                                 <div class="genre-header">
-                                    <i class="fas fa-guitar"></i>
-                                    <h4>ギター</h4>
+                                    <i class="fas fa-guitar"></i><h4>ギター</h4>
                                 </div>
                                 <div class="genre-body">
                                     <p>エレキ／アコースティックギターのレッスンを担当していただきます。基礎から応用まで、幅広いスキルを教えられる方を歓迎します。</p>
