--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="mobile-fix.css">
     <!-- レイアウト修正用CSS -->
     <link rel="stylesheet" href="layout-fix.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         /* 新規追加スタイル */
         .hero-quick-links {
@@ -599,13 +600,13 @@
                         </div>
                         <p class="mt-4">初心者〜中級者向けのレッスンが中心です。ご自身の得意ジャンルで活躍いただけます。</p>
                         
-                        <div class="cta-container">
-                            <a href="new-recruit.html" class="recruit-btn">
+                        <div style="text-align: center; margin-top: 2rem;">
+                            <a href="new-recruit.html" class="btn btn-primary" style="display: inline-block; padding: 0.8rem 2rem; font-size: 1.1rem;">
                                 採用情報の詳細はこちら <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
                     </div>
-                </section>
+                </section>   
             </div>
         </section>
     </main>
