--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <li><a href="#instruments" class="nav-link">楽器</a></li>
                 <li><a href="#lessons" class="nav-link">レッスン</a></li>
                 <li><a href="#price" class="nav-link">料金</a></li>
-                <li><a href="#about" class="nav-link">私たちについて</a></li>
+                <li><a href="about.html" class="nav-link">私たちについて</a></li>
                 <li><a href="#contact" class="nav-link">お問い合わせ</a></li>
                 <li><a href="#recruit" class="nav-link">採用情報</a></li>
             </ul>
