--- a/index.html
+++ b/index.html
@@ -552,6 +552,38 @@
             </div>
         </section>
 
+        <!-- 私たちについてプレビューセクション -->
+        <section id="about" class="section about-preview-section">
+            <h2 class="section-title">私たちについて</h2>
+            <div class="about-preview-content">
+                <div class="about-preview-text">
+                    <p>音楽を学ぶことは、人生を豊かにし、自己表現を広げる素晴らしい方法です。</p>
+                    <p>私たちのオンライン音楽教室では、どこでも、誰でも、好きな時間にレッスンを受けることができ、あなたのペースで音楽を学ぶことができます。</p>
+                    <p>初心者から上級者まで、幅広いニーズに対応したコースを提供しており、あなただけのオーダーメイドレッスンをお楽しみいただけます。</p>
+                </div>
+                <div class="about-preview-features">
+                    <div class="about-feature">
+                        <i class="fas fa-user-tie"></i>
+                        <h3>プロフェッショナルな講師陣</h3>
+                        <p>経験豊富な講師陣が、あなたの音楽のスキルを次のレベルへと導きます。</p>
+                    </div>
+                    <div class="about-feature">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                        <h3>個別対応のレッスン</h3>
+                        <p>一人一人のペースや目標に合わせた、きめ細かい指導が特徴です。</p>
+                    </div>
+                    <div class="about-feature">
+                        <i class="fas fa-clock"></i>
+                        <h3>いつでも、どこでも</h3>
+                        <p>自宅やカフェなど、好きな場所でレッスンを受けることができます。</p>
+                    </div>
+                </div>
+                <div class="join-button-container">
+                    <a href="about.html" class="join-button">詳しく見る <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </section>
+
         <!-- 採用情報セクション -->
         <section id="recruit" class="section recruit-section">
             <h2 class="section-title">採用情報</h2>
