--- a/about.html
+++ b/about.html
@@ -650,7 +650,7 @@
             </div>
             
             <div class="mission-image" data-aos="fade-left">
-                <img src="https://source.unsplash.com/random/600x800/?music,piano" alt="ミッションイメージ">
+                <img src="images/mission_image.png" alt="ミッションイメージ">
             </div>
         </section>
 
