--- a/index.html
+++ b/index.html
@@ -535,16 +535,37 @@
             </div>
         </section>
 
-        <!-- 私たちについてプレビューセクション -->
+        <!-- 私たちについて -->
         <section id="about" class="section about-preview-section">
             <h2 class="section-title">私たちについて</h2>
             <div class="about-preview-content">
-                <div class="about-preview-text">
-                    <p>音楽を学ぶことは、人生を豊かにし、自己表現を広げる素晴らしい方法です。</p>
-                    <p>私たちのオンライン音楽教室では、どこでも、誰でも、好きな時間にレッスンを受けることができ、あなたのペースで音楽を学ぶことができます。</p>
-                    <p>初心者から上級者まで、幅広いニーズに対応したコースを提供しており、あなただけのオーダーメイドレッスンをお楽しみいただけます。</p>
+                <div class="about-preview-grid">
+                    <div class="about-preview-column">
+                        <div class="about-preview-icon">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <div class="about-preview-text">
+                            <p>音楽を学ぶことは、人生を豊かにし、自己表現を広げる素晴らしい方法です。</p>
+                        </div>
+                    </div>
+                    <div class="about-preview-column">
+                        <div class="about-preview-icon">
+                            <i class="fas fa-globe"></i>
+                        </div>
+                        <div class="about-preview-text">
+                            <p>私たちのオンライン音楽教室では、どこでも、誰でも、好きな時間にレッスンを受けることができ、あなたのペースで音楽を学ぶことができます。</p>
+                        </div>
+                    </div>
+                    <div class="about-preview-column">
+                        <div class="about-preview-icon">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="about-preview-text">
+                            <p>初心者から上級者まで、幅広いニーズに対応したコースを提供しており、あなただけのオーダーメイドレッスンをお楽しみいただけます。</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="join-button-container">
+                <div class="cta-container">
                     <a href="about.html" class="join-button">詳しく見る <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
