--- a/about.html
+++ b/about.html
@@ -24,12 +24,12 @@
         .page-title {
             position: relative;
             background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
-            padding: 3rem 0;
+            padding: 4rem 0; /* 3remから4remに変更 */
             border-radius: 16px;
             margin-bottom: 3rem;
             text-align: center;
             overflow: hidden;
-            box-shadow: 0 10px 30px rgba(62, 76, 141, 0.2);
+            box-shadow: 0 15px 35px rgba(62, 76, 141, 0.25); /* シャドウを強調 */
         }
         
         .page-title h2 {
