--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             font-family: 'Playfair Display', 'Noto Sans JP', serif;
         }
 
-        /* 赤線を削除するため、::before と ::after 擬似要素も修正 */
+        /* 赤線を削除するため、::before と ::after 擬似要素も修正 
         .page-title::before {
             content: '';
             position: absolute;
@@ -53,7 +53,7 @@
             background-color: rgba(255, 255, 255, 0.1);
             z-index: 1;
         }
-        
+        */
         .page-title::after {
             content: '';
             position: absolute;
