--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="プロミュージシャンによる本格的な音楽レッスン。ギター、ベース、DTM、作曲など多彩なコースをご用意。初心者から上級者まで対応。">
-    <meta property="og:title" content="Music School - 音楽を、もっと自由に。">
+    <meta property="og:title" content="Melody Lab - 音楽を、もっと自由に。">
     <meta property="og:description" content="プロミュージシャンによる本格的な音楽レッスン。ギター、ベース、DTM、作曲など多彩なコースをご用意。">
     <meta property="og:image" content="images/ogp.jpg">
-    <title>Music School - 音楽を、もっと自由に</title>
+    <title>Melody Lab - 音楽を、もっと自由に</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
