--- a/about.html
+++ b/about.html
@@ -475,7 +475,7 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <h1><i class="fas fa-music"></i> Music School</h1>
+            <a href="index.html"><img src="images/music_school_logo_new.jpg" alt="Melody Lab" class="logo-image"></a>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
             <i class="fas fa-bars" aria-hidden="true"></i>
@@ -502,11 +502,11 @@
 
         <section class="about-content" data-aos="fade-up" data-aos-delay="100">
             <div class="about-intro">
-                <p>音楽を学ぶことは、人生を豊かにし、自己表現を広げる素晴らしい方法です。</p>
-                <p>しかし、忙しい毎日や移動の手間で、音楽を学ぶ機会が限られてしまうこともあります。</p>
-                <p>そんな時に、オンラインでの音楽レッスンが強力な味方になります。</p>
-                <p>私たちのオンライン音楽教室では、どこでも、誰でも、好きな時間にレッスンを受けることができ、あなたのペースで音楽を学ぶことができます。</p>
-                <p>初心者から上級者まで、幅広いニーズに対応したコースを提供しており、あなただけのオーダーメイドレッスンをお楽しみいただけます。</p>
+                <p>音楽は、もっと自由で、もっと身近なもの。</p>
+                <p>「Melody Lab」は、あなたの音楽の「好き」を「できる」に変えるオンライン音楽教室です。</p>
+                <p>経験豊富な講師陣が、楽器の基礎から応用まで丁寧に指導します。</p>
+                <p>あなたの「やってみたい」を大切に、それぞれのペースで成長できるレッスンを提供します。</p>
+                <p>楽器未経験の方も大歓迎！まずは、お気軽にお問い合わせください。</p>
             </div>
 
             <h3 class="about-section-title" data-aos="fade-up">
