--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="プロミュージシャンによる本格的な音楽レッスン。ギター、ベース、DTM、作曲など多彩なコースをご用意。初心者から上級者まで対応。">
-    <meta property="og:title" content="Melody Lab - 音楽を、もっと自由に。">
+    <meta property="og:title" content="Music School - 音楽を、もっと自由に。">
     <meta property="og:description" content="プロミュージシャンによる本格的な音楽レッスン。ギター、ベース、DTM、作曲など多彩なコースをご用意。">
     <meta property="og:image" content="images/ogp.jpg">
-    <title>Melody Lab - 音楽を、もっと自由に</title>
+    <title>Music School - 音楽を、もっと自由に</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -234,7 +234,7 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <a href="index.html"><img src="images/music_school_logo_new.jpg" alt="Melody Lab" class="logo-image"></a>
+            <h1><i class="fas fa-music"></i> Music School</h1>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
             <i class="fas fa-bars" aria-hidden="true"></i>
@@ -271,7 +271,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero.jpg" alt="Melody Lab" loading="lazy">
+                <img src="images/hero.jpg" alt="Music School" loading="lazy">
             </div>
         </section>
 
@@ -588,7 +588,7 @@
             <h2 class="section-title">採用情報</h2>
             <div class="recruit-container">
                 <div class="recruit-intro">
-                    <p>Melody Labでは、音楽の素晴らしさを伝え、生徒さんの成長をサポートしてくれる講師を募集しています。<br>音楽を通じて人々の生活を豊かにする仕事に、あなたもチャレンジしてみませんか？</p>
+                    <p>Music Schoolでは、音楽の素晴らしさを伝え、生徒さんの成長をサポートしてくれる講師を募集しています。<br>音楽を通じて人々の生活を豊かにする仕事に、あなたもチャレンジしてみませんか？</p>
                 </div>
 
                 <section class="price-section animate-fadeInUp">
