--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <h1><i class="fas fa-music"></i> Music School</h1>
+            <h1><a href="index.html"><img src="images/music_school_logo_new.jpg" alt="Melody Lab" class="logo-image"></a></h1>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
             <i class="fas fa-bars" aria-hidden="true"></i>
