--- a/index.html
+++ b/index.html
@@ -234,8 +234,9 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <a href="index.html" style="display: flex; align-items: center;">
+            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
                 <img src="images/music_school_logo_new.jpg" alt="Melody Lab" class="logo-image">
+                <span class="logo-text">Melody Lab</span>
             </a>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
