--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
+            <a href="index.html">
                 <img src="images/music_school_logo_new.jpg" alt="Melody Lab" class="logo-image">
                 <span class="logo-text">Melody Lab</span>
             </a>
