--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <a href="index.html">
-                <img src="images/music_school_logo_new.jpg" alt="Melody Lab" class="logo-image">
-                <span class="logo-text">Melody Lab</span>
+            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
+                <img src="images/music_school_logo_new.jpg" alt="Melody Lab" style="height: 45px; width: auto; max-width: 100%; margin-right: 10px;">
+                <span style="color: var(--primary); font-size: 1.5rem; font-weight: 700; font-family: 'Playfair Display', 'Montserrat', 'Noto Sans JP', sans-serif;">Melody Lab</span>
             </a>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
