--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 </head>
 <body>
     <header class="fixed-header">
-        <div class="logo">
-            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
-                <img src="images/ms_logo.jpg" alt="Melody Lab" style="height: 70px; width: auto; max-width: 100%; margin-right: 10px;">
-                <span style="color: var(--primary); font-size: 1.5rem; font-weight: 700; font-family: 'Playfair Display', 'Montserrat', 'Noto Sans JP', sans-serif;">Melody Lab</span>
+        <<div class="logo">
+            <a href="index.html">
+                <img src="images/ms_logo.jpg" alt="Melody Lab" style="height: 70px !important; width: auto !important; margin-right: 20px !important;" class="logo-image">
+                <span class="logo-text" style="margin-left: 10px !important;">Melody Lab</span>
             </a>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
