--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 </head>
 <body>
     <header class="fixed-header">
-        <<div class="logo">
+        <div class="logo">
             <a href="index.html">
-                <img src="images/ms_logo.jpg" alt="Melody Lab" style="height: 70px !important; width: auto !important; margin-right: 20px !important;" class="logo-image">
-                <span class="logo-text" style="margin-left: 10px !important;">Melody Lab</span>
+                <img src="images/ms_logo.jpg" alt="Melody Lab" style="height: 65px !important; width: auto !important;" class="logo-image">
+                <span class="logo-text">Melody Lab</span>
             </a>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
