--- a/index.html
+++ b/index.html
@@ -559,9 +559,10 @@
             <h2 class="section-title">私たちについて</h2>
             <div class="about-preview-content">
                 <div class="about-preview-text">
-                    <p>音楽を学ぶことは、人生を豊かにし、自己表現を広げる素晴らしい方法です。</p>
-                    <p>私たちのオンライン音楽教室では、どこでも、誰でも、好きな時間にレッスンを受けることができ、あなたのペースで音楽を学ぶことができます。</p>
-                    <p>初心者から上級者まで、幅広いニーズに対応したコースを提供しており、あなただけのオーダーメイドレッスンをお楽しみいただけます。</p>
+                    <p>音楽は、もっと自由で、もっと身近なもの。</p>
+                    <p>「Melody Lab」は、あなたのライフスタイルに合わせて学べるオンライン音楽教室です。</p>
+                    <p>あなたの「やってみたい」を大切に、それぞれのペースで成長できるレッスンを提供します。</p>
+                    <p>楽器未経験の方も大歓迎！まずは、お気軽にお問い合わせください。</p>
                 </div>
                 <div class="join-button-container">
                     <a href="about.html" class="join-button">詳しく見る <i class="fas fa-arrow-right"></i></a>
