--- a/new-recruit.html
+++ b/new-recruit.html
@@ -218,7 +218,10 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <h1><i class="fas fa-music"></i> Music School</h1>
+            <a href="index.html">
+                <img src="images/ms_logo.jpg" alt="Melody Lab" style="height: 60px !important; width: auto !important;" class="logo-image">
+                <span class="logo-text">Melody Lab</span>
+            </a>
         </div>
         <button class="mobile-menu-toggle" aria-label="メニューを開く" aria-expanded="false">
             <i class="fas fa-bars" aria-hidden="true"></i>
