--- a/index.html
+++ b/index.html
@@ -229,6 +229,18 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        .logo-text {
+            color: #4a90e2 !important; /* または var(--primary) !important */
+            font-size: 1.5rem !important;
+            font-weight: bold !important;
+            margin-left: 10px !important;
+        }
+        
+        .logo-image {
+            height: 60px !important;
+            width: auto !important;
+        }
     </style>
 </head>
 <body>
