--- a/index.html
+++ b/index.html
@@ -166,13 +166,29 @@
 
         /* お問い合わせフォームのスタイル */
         .contact-section {
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, #f8f9ff 0%, #eeeeff 100%);
             padding: 5rem 0;
+            position: relative;
+            overflow: hidden;
+            border-radius: 15px;
+        }
+        .contact-section::after {
+            content: '';
+            position: absolute;
+            bottom: -50px;
+            left: -50px;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background-color: rgba(226, 114, 91, 0.08);
+            z-index: 1;
         }
         .contact-container {
             max-width: 800px;
             margin: 0 auto;
             padding: 0 1.5rem;
+            position: relative;
+            z-index: 2;
         }
         .contact-intro {
             text-align: center;
