--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
             <h2 class="section-title">採用情報</h2>
             <div class="recruit-container">
                 <div class="recruit-intro">
-                    <p>Music Schoolでは、音楽の素晴らしさを伝え、生徒さんの成長をサポートしてくれる講師を募集しています。<br>音楽を通じて人々の生活を豊かにする仕事に、あなたもチャレンジしてみませんか？</p>
+                    <p>Melody Labでは、音楽の素晴らしさを伝え、生徒さんの成長をサポートしてくれる講師を募集しています。<br>音楽を通じて人々の生活を豊かにする仕事に、あなたもチャレンジしてみませんか？</p>
                 </div>
 
                 <section class="price-section animate-fadeInUp">
