--- a/about.html
+++ b/about.html
@@ -592,7 +592,7 @@
         </section>
 
         <section class="stats-section" data-aos="fade-up">
-            <h3 class="stats-title">数字で見る Music School</h3>
+            <h3 class="stats-title">数字で見る Melody Lab</h3>
             
             <div class="stats-grid">
                 <div class="stat-item" data-aos="zoom-in" data-aos-delay="100">
@@ -621,7 +621,7 @@
             <div class="mission-content" data-aos="fade-right">
                 <h3 class="mission-title">私たちのミッション</h3>
                 <p class="mission-text">
-                    Music Schoolは、音楽の喜びと学びを誰もが享受できる世界の実現を目指しています。
+                    Melody Labは、音楽の喜びと学びを誰もが享受できる世界の実現を目指しています。
                     時間や場所の制約を超え、一人ひとりに合わせた質の高い音楽教育を提供することで、
                     生徒の皆様の音楽的可能性を最大限に引き出します。
                 </p>
