--- a/new-recruit.html
+++ b/new-recruit.html
@@ -291,7 +291,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <h2><i class="fas fa-music"></i> Music School</h2>
+                <h2><i class="fas fa-music"></i> Melody Lab</h2>
                 <p>音楽を通じて、あなたの人生をより豊かに</p>
             </div>
             <div class="footer-links">
