--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             display: inline-flex;
             align-items: center;
             background-color: rgba(255, 255, 255, 0.2);
-            color: #FFEB3B; /* 黄色に変更（見やすいコントラスト） */
+            color: #6E7072; 
             padding: 0.5rem 1rem;
             border-radius: 4px;
             font-weight: 600; /* より太く */
