--- a/index.html
+++ b/index.html
@@ -617,7 +617,8 @@
                         <i class="fas fa-guitar"></i>
                     </div>
                     <div class="lesson-details">
-@@ -618,379 +617,315 @@
+                        <h3>Guitar Lesson</h3>
+                        <div class="lesson-content">
                             <p>ギターレッスンでは、初心者から上級者まで、あなたのレベルに合わせた指導を行います。</p>
                             <p>基本的な弾き方からテクニック、音楽理論まで幅広く学べます。</p>
                             <div class="lesson-features">
