--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
             display: inline-flex;
             align-items: center;
             background-color: rgba(255, 255, 255, 0.2);
-            color: #6E7072; 
+            color: #6E7072;
             padding: 0.5rem 1rem;
             border-radius: 4px;
-            font-weight: 600; /* より太く */
+            font-weight: 500;
             transition: all 0.3s ease;
         }
         .quick-link:hover {
             background-color: rgba(255, 255, 255, 0.3);
-            color: #FFFFFF; /* ホバー時は白色に戻す */
-            transform: translateY(-2px); /* ホバー時に少し浮き上がる効果 */
         }
         .quick-link i {
             margin-right: 0.5rem;
