--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Noto+Sans+JP:wght@400;500;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- ヘッダーとナビゲーション用CSS -->
+    <link rel="stylesheet" href="header-nav.css">
     <!-- フッター用CSS -->
     <link rel="stylesheet" href="footer.css">
     <!-- 料金表セクション用CSS -->
@@ -507,7 +509,7 @@
 <body>
     <header class="fixed-header">
         <div class="logo">
-            <a href="index.html">
+            <a href="index.html" aria-label="Melody Lab ホームページ">
                 <img src="images/ms_logo.jpg" alt="Melody Lab" class="logo-image">
                 <span class="logo-text">Melody Lab</span>
             </a>
@@ -525,6 +527,17 @@
                 <li><a href="#contact" class="nav-link">お問い合わせ</a></li>
                 <li><a href="#recruit" class="nav-link">採用情報</a></li>
             </ul>
+            <!-- オプション: 言語切り替えボタンを追加 -->
+            <div class="language-selector">
+                <button class="language-btn">
+                    <i class="fas fa-globe"></i> 日本語
+                </button>
+                <div class="language-dropdown">
+                    <a href="#">English</a>
+                    <a href="#">中文</a>
+                    <a href="#">한국어</a>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -1234,6 +1247,7 @@
         });
     </script>
 
+    <script src="header-nav.js"></script>
     <script src="price-tabs.js"></script>
     
 </body>
