--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="プロミュージシャンによる本格的な音楽レッスン。ギター、ベース、DTM、作曲など多彩なコースをご用意。初心者から上級者まで対応。">
     <meta property="og:title" content="Music School - 音楽を、もっと自由に。">
     <meta property="og:description" content="プロミュージシャンによる本格的な音楽レッスン。ギター、ベース、DTM、作曲など多彩なコースをご用意。">
-    <meta property="og:image" content="images/music_school_logo_rem.png">
+    <meta property="og:image" content="images/music_school_logo_rem.jpg">
     <title>Music School - 音楽を、もっと自由に</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
