--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                                 </div>
                                 <div class="plan-feature">
                                     <i class="fas fa-check"></i>
-                                    <span class="plan-feature-text">楽器レンタル可能（有料）</span>
+                                    <span class="plan-feature-text">月1回の質問サポート</span>
                                 </div>
                             </div>
                             <div class="plan-cta">
@@ -913,7 +913,7 @@
                                 </div>
                                 <div class="plan-feature">
                                     <i class="fas fa-check"></i>
-                                    <span class="plan-feature-text">月1回の質問サポート</span>
+                                    <span class="plan-feature-text">月3回の質問サポート</span>
                                 </div>
                             </div>
                             <div class="plan-cta">
@@ -954,7 +954,7 @@
                                 </div>
                                 <div class="plan-feature">
                                     <i class="fas fa-check"></i>
-                                    <span class="plan-feature-text">発表会への参加機会</span>
+                                    <span class="plan-feature-text">YOUTUBE等の動画投稿サポート</span>
                                 </div>
                             </div>
                             <div class="plan-cta">
