--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,9 @@
                 <div class="contact-form-container">
                     <h3>お問い合わせフォーム</h3>
                     <p>詳細なお問い合わせやご質問は、フォームからお気軽にどうぞ。</p>
-                    <a href="contact.html" class="submit-button">お問い合わせフォームへ <i class="fas fa-paper-plane"></i></a>
+                    <div class="form-submit">
+                        <a href="contact.html" class="submit-button">お問い合わせフォームへ <i class="fas fa-paper-plane"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
