--- a/index.html
+++ b/index.html
@@ -511,6 +511,11 @@
             height: 60px !important;
             width: auto !important;
         }
+
+        /* タイトルフォントサイズ調整 */
+        .hero-content h2 {
+            font-size: 3.1rem !important; /* 元のvar(--fs-xl)は3.5remなので小さくします */
+        }
     </style>
 </head>
 <body>
