--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@
         <div class="footer-container">
             <div class="footer-col">
                 <div class="footer-logo">
-                    <img src="images/ms_logo.jpg" alt="Melody Lab">
+                    <img src="images/music_school_logo_rem.png" alt="Melody Lab">
                     <h3 class="footer-logo-text">Melody Lab</h3>
                 </div>
                 <p class="footer-about">
