--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     <header class="fixed-header">
         <div class="logo">
             <a href="index.html" aria-label="Melody Lab ホームページ">
-                <img src="images/ms_logo.jpg" alt="Melody Lab" class="logo-image">
+                <img src="images/music_school_logo_rem.png" alt="Melody Lab" class="logo-image">
                 <span class="logo-text">Melody Lab</span>
             </a>
         </div>
